--- a/proyekpabwe_kelompok2/public/index.html
+++ b/proyekpabwe_kelompok2/public/index.html
@@ -35,7 +35,10 @@
       crossorigin></script>
 
     <script>var Alert = ReactBootstrap.Alert;</script>
-        <title>React App</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <title>React App</title>
+
   </head>
       <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -50,5 +53,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
